<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        app:showAsAction="never" />
        
    <item
        android:id="@+id/action_voice_commands"
        android:orderInCategory="200"
        android:title="@string/voice_commands"
        android:icon="@android:drawable/ic_btn_speak_now"
        app:showAsAction="never" />
        
    <item
        android:id="@+id/action_about"
        android:orderInCategory="300"
        android:title="@string/about"
        android:icon="@android:drawable/ic_menu_info_details"
        app:showAsAction="never" />
</menu>